# FulgurEngine

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  TODO.md  ideas.docx  main  main.cpp
.cache/clangd/index/: Application.cpp.509D816858C70B89.idx  Application.hpp.434DA9587833C4F2.idx  FulgurCore.hpp.292B6904F3D96549.idx  FulgurUtils.cpp.6D84E6EE4C7AD4A1.idx  FulgurUtils.hpp.3ECB196A5928C2AB.idx  Logger.cpp.D66259BDCA3AFDF0.idx  Logger.hpp.FAB594351853982E.idx  Shader.cpp.21D130A10A87E77F.idx  Shader.hpp.A91AED4DF7C808F3.idx  ThreadPool.cpp.6A93CC22BBA7D9C3.idx  ThreadPool.hpp.50C4A99EF0417DA3.idx  Time.cpp.AFDDCEA01C051C2F.idx  Time.hpp.357C07232AD54BE6.idx  VulkanCommandBuffer.cpp.F3AC4B8D05145472.idx  VulkanCommandBuffer.hpp.1BDF87CA81EA63EC.idx  VulkanCommandPool.cpp.6858C9EAA6767071.idx  VulkanCommandPool.hpp.6A41D2566E044ECC.idx  VulkanContext.cpp.F97C3AF8A6FCAFE6.idx  VulkanContext.hpp.FB2CAD9CF29E3AA2.idx  VulkanDevice.cpp.E1CF53A0F9FB0399.idx  VulkanDevice.hpp.C544C83FB2102226.idx  VulkanFrameBuffer.cpp.08838D81F47905D5.idx  VulkanFrameBuffer.hpp.6958E811F449ABB4.idx  VulkanGraphicsPipeline.cpp.937D1A33C32781B6.idx  VulkanGraphicsPipeline.hpp.BB9EEB357C4F1D0A.idx  VulkanQueue.cpp.9D3FDB7C71A529B3.idx  VulkanQueue.hpp.D0415F8F2C18E0DF.idx  VulkanSwapChain.cpp.AB3B94F782D205BB.idx  VulkanSwapChain.hpp.C17CDEFCD5458F1F.idx  VulkanSynchronization.cpp.0F82D86FD48D9DA8.idx  VulkanSynchronization.hpp.6983482FCE5DE68D.idx  Window.cpp.05AF1C972E6B4F32.idx  Window.cpp.107D6C623E8FAAAA.idx  Window.hpp.CD132FB438584E8E.idx  Window.hpp.E47841B1EE7DBD61.idx  glad.c.DCBF7AD652CF69B4.idx  glad.h.4AF46176C2B2EADD.idx  khrplatform.h.2D28E5FF5E226295.idx
src/core/: FulgurCore.hpp
src/engine/: Application.cpp  Application.hpp  CMakeLists.txt  Logger.cpp  Logger.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  Renderer.hpp  RendererFactory.cpp  RendererFactory.hpp  Shader.hpp  Timer.cpp  Timer.hpp  VertexBuffer.hpp  VulkanRenderer.hpp
src/game/: CMakeLists.txt  Main.cpp
src/gfx/: Shader.cpp  Shader.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrameBuffer.cpp  VulkanFrameBuffer.hpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.hpp  VulkanQueue.cpp  VulkanQueue.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanSynchronization.cpp  VulkanSynchronization.hpp
src/renderer/: GlfwContext.cpp  GlfwContext.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
src/shaders/: compile.sh  triangle.frag  triangle.vert  triangle_frag.spv  triangle_vert.spv
src/utils/: FulgurUtils.cpp  FulgurUtils.hpp  Logger.cpp  Logger.hpp  Math.hpp  Singleton.hpp  ThreadPool.cpp  ThreadPool.hpp  Time.cpp  Time.hpp
